--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -1,7 +1,26 @@
 {
+  "cancel": "Cancel",
+  "leave": "Leave",
+  "info": "Info",
   "dashboard": {
     "menu_title": "Dashboard",
-    "title": "IPS dashboard"
+    "title": "IPS dashboard",
+    "empty_piechart_label": "Statistics are not available",
+    "severities": "Severities",
+    "categories": "Categories",
+    "sources": "Sources",
+    "destinations": "Destinations",
+    "hits": "Hits",
+    "last_updated_24h": "Last update: 24h ago",
+    "last_updated": "Last update: {time} ago",
+    "no_data_found": "No data found",
+    "counters": "Counters",
+    "accepted": "Accepted",
+    "blocked": "Blocked",
+    "replaced": "Replaced",
+    "rejected": "Rejected",
+    "rules_loaded": "Rules loaded",
+    "rules_failed": "Rules failed"
   },
   "configuration": {
     "menu_title": "Configuration",
@@ -33,7 +52,9 @@
     "no_categories_applied_desc": "You have disabled all categories, but changes are still not applied. Click on the button below to apply",
     "ips_is_disabled": "IPS is disabled",
     "ips_is_disabled_desc": "Click on the button below to enable IPS",
-    "enable_ips": "Enable IPS"
+    "enable_ips": "Enable IPS",
+    "not_applied_changes_title": "Wait",
+    "not_applied_changes": "You have changes not applied. Are you sure that you want to leave this page"
   },
   "logs": {
     "title": "Logs",
