--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -8,11 +8,11 @@
     "empty_piechart_label": "Statistics are not available",
     "severities": "Severities",
     "categories": "Categories",
-    "sources": "Sources",
-    "destinations": "Destinations",
+    "sources": "Top 10 alerts by source IP",
+    "destinations": "Top 10 alerts by destination IP",
     "hits": "Hits",
-    "last_updated_24h": "Last update: 24h ago",
-    "last_updated": "Last update: {time} ago",
+    "last_updated_24h": "Last 24h hours",
+    "last_updated": "Since {time} ago",
     "no_data_found": "No data found",
     "counters": "Counters",
     "accepted": "Accepted",
@@ -21,8 +21,8 @@
     "rejected": "Rejected",
     "rules_loaded": "Rules loaded",
     "rules_failed": "Rules failed",
-    "evebox": "Evebox",
-    "suricata": "Suricata"
+    "evebox": "Evebox alerts",
+    "suricata": "Suricata statistics"
   },
   "configuration": {
     "menu_title": "Configuration",
