ui. refactor configuration page

--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -2,6 +2,8 @@
   "cancel": "Cancel",
   "leave": "Leave",
   "info": "Info",
+  "search": "Search",
+  "warning": "Warning",
   "dashboard": {
     "menu_title": "Dashboard",
     "title": "IPS dashboard",
@@ -28,15 +30,10 @@
     "menu_title": "Configuration",
     "title": "Configuration",
     "categories": "Categories",
-    "available_categories": "Search available categories",
-    "configured_categories": "Configured categories",
-    "selected_categories": "Selected categories",
-    "category_not_found": "Category not found",
-    "select_category": "Select category",
-    "save_categories": "Add categories",
-    "save_category": "Add category",
+    "category_list": "Categories list",
     "alert": "Alert",
     "block": "Block",
+    "enable": "Enable",
     "disable": "Disable",
     "ips": "IPS",
     "enabled": "Enabled",
@@ -50,13 +47,14 @@
     "categories_not_found_desc": "Click on the button below to download categories",
     "categories_downloaded_ok": "Categories downloaded successfully!",
     "categories_downloaded_error": "Categories not downloaded.",
-    "update_items": "Apply changes",
-    "no_categories_applied_desc": "You have disabled all categories, but changes are still not applied. Click on the button below to apply",
     "ips_is_disabled": "IPS is disabled",
     "ips_is_disabled_desc": "Click on the button below to enable IPS",
     "enable_ips": "Enable IPS",
     "not_applied_changes_title": "Wait",
-    "not_applied_changes": "You have changes not applied. Are you sure that you want to leave this page"
+    "not_applied_changes": "You have changes not applied. Are you sure that you want to leave this page",
+    "apply_changes": "Apply changes",
+    "reset": "Reset",
+    "configuration_categories_change": "There are categories changes not yet applied. Click on 'Apply changes' to update"
   },
   "logs": {
     "title": "Logs",
