ui. added info if suricata is not running

--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -25,7 +25,8 @@
     "rules_failed": "Rules failed",
     "evebox": "Evebox alerts",
     "suricata": "Suricata statistics",
-    "open_evebox": "Open EveBox"
+    "open_evebox": "Open EveBox",
+    "suricata_is_not_running": "Suricata is not running"
   },
   "configuration": {
     "menu_title": "Configuration",
