--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -5,7 +5,7 @@
   "search": "Search",
   "warning": "Warning",
   "dashboard": {
-    "menu_title": "Dashboard",
+    "menu_title": "IPS",
     "title": "IPS dashboard",
     "empty_piechart_label": "Statistics are not available",
     "severities": "Severities",
