ui. improve dashboard labels

--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -8,8 +8,8 @@
     "menu_title": "IPS",
     "title": "IPS dashboard",
     "empty_piechart_label": "Statistics are not available",
-    "severities": "Severities",
-    "categories": "Categories",
+    "severities": "Grouped by severity",
+    "categories": "Grouped by category",
     "sources": "Top 10 alerts by source IP",
     "destinations": "Top 10 alerts by destination IP",
     "hits": "Hits",
@@ -23,7 +23,7 @@
     "rejected": "Rejected",
     "rules_loaded": "Rules loaded",
     "rules_failed": "Rules failed",
-    "evebox": "Evebox alerts",
+    "evebox": "Evebox events",
     "suricata": "Suricata statistics",
     "open_evebox": "Open EveBox",
     "suricata_is_not_running": "Suricata is not running"
