--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -26,7 +26,7 @@
     "evebox": "Evebox events",
     "suricata": "Suricata statistics",
     "open_evebox": "Open EveBox",
-    "suricata_is_not_running": "Suricata is not running"
+    "suricata_is_not_running": "Suricata statistics are not yet available"
   },
   "configuration": {
     "menu_title": "Configuration",
