ui. added filter in categories

--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -35,6 +35,7 @@
     "category_list": "Categories list",
     "alert": "Alert",
     "block": "Block",
+    "all": "-",
     "enable": "Enable",
     "disable": "Disable",
     "ips": "IPS",
@@ -60,7 +61,8 @@
     "actions": "Actions",
     "reset_default": "Restore defaults categories",
     "enable_all": "Enable all categories",
-    "disable_all": "Disable all categories"
+    "disable_all": "Disable all categories",
+    "filter_by": "Filter by"
   },
   "logs": {
     "title": "Logs",
