--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -8,6 +8,11 @@
   "action": "Action",
   "list": "List",
   "save": "Save",
+  "next": "Next",
+  "prev": "Previous",
+  "of": "of",
+  "rows_per_page": "Rows per page",
+  "all": "All",
   "edit": "Edit",
   "enable": "Enable",
   "disable": "Disable",
