--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -12,6 +12,11 @@
   "enable": "Enable",
   "disable": "Disable",
   "delete": "Delete",
+  "next": "Next",
+  "prev": "Previous",
+  "of": "of",
+  "rows_per_page": "Rows per page",
+  "all": "All",
   "are_you_sure": "Are you sure",
   "dashboard": {
     "menu_title": "IPS",
