--- a/ui/public/i18n/language.json
+++ b/ui/public/i18n/language.json
@@ -81,28 +81,17 @@
   "bypass": {
     "menu_title": "Bypass",
     "title": "Bypass",
-    "source": "Source",
-    "destination": "Destination",
     "description": "Description",
     "bypass": "Bypass",
-    "add_source": "Add source",
-    "edit_source": "Edit source",
-    "delete_source": "Delete source",
-    "add_destination": "Add destination",
-    "edit_destination": "Edit destination",
-    "delete_destination": "Delete destination",
-    "source_created_ok": "Source created successfully!",
-    "source_created_error": "Source not created.",
-    "source_updated_ok": "Source updated successfully!",
-    "source_updated_error": "Source not updated.",
-    "source_deleted_ok": "Source deleted successfully!",
-    "source_deleted_error": "Source not deleted.",
-    "destination_created_ok": "Destination created successfully!",
-    "destination_created_error": "Destination not created.",
-    "destination_updated_ok": "Destination updated successfully!",
-    "destination_updated_error": "Destination not updated.",
-    "destination_deleted_ok": "Destination deleted successfully!",
-    "destination_deleted_error": "Destination not deleted."
+    "add_bypass": "Add bypass",
+    "edit_bypass": "Edit bypass",
+    "delete_bypass": "Delete bypass",
+    "bypass_created_ok": "Source created successfully!",
+    "bypass_created_error": "Source not created.",
+    "bypass_updated_ok": "Source updated successfully!",
+    "bypass_updated_error": "Source not updated.",
+    "bypass_deleted_ok": "Source deleted successfully!",
+    "bypass_deleted_error": "Source not deleted."
   },
   "logs": {
     "title": "Logs",
@@ -121,7 +110,7 @@
   },
   "validation": {
     "validation_failed": "Validation failed",
-    "source_already_exists": "A bypass for the same source already exists",
+    "bypass_already_exists": "A bypass for the same object already exists",
     "destination_already_exists": "A bypass for the same destination already exists",
     "object_not_found": "Object not found",
     "object_not_supported": "Object not supported",
